infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: streaming
  labels:
    name: streaming
    project: mini-streaming-platform
